[tool.poetry]
name = "flame-result-service"
version = "0.1.0"
description = "Service for handling intermediate files and submitting result files to the FLAME Hub."
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "project" }]
license = "Apache-2.0"

[tool.poetry.scripts]
flame-result = "project.main:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4"
minio = ">=7.0.0,<8"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0" }
pydantic-settings = ">=2.3.0,<3"
python-multipart = ">=0.0.12,<1"
click = ">=8.0.0,<9"
jwcrypto = ">=1.5.0,<2"
httpx = ">=0.27.0"
tomli = ">=2.0.0,<3"
starlette = ">=0.40.0"
cryptography = ">=43.0.1"
peewee = "^3.17.8"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.4.0"
pre-commit = "^3.6.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
