[tool.poetry]
name = "flame-result-service"
version = "0.1.0"
description = "Service for handling intermediate files and submitting result files to the FLAME Hub."
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "project" }]
license = "Apache-2.0"

[tool.poetry.scripts]
flame-result = "project.server:run_server"

[tool.poetry.dependencies]
python = ">=3.10,<4"
minio = "^7.2.14"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"
jwcrypto = "^1.5.6"
tomli = "^2.2.1"
peewee = "^3.17.8"
psycopg2-binary = "^2.9.10"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.0"
pre-commit = "^4.0.1"
pytest-dotenv = "^0.5.2"
testcontainers = {extras = ["postgres"], version = "^4.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
